# Komorebi

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  PLAN.md  README.md  main.py  pyproject.toml  requirements.txt  server.py
.claude/: settings.json
agents/: coordinator.py  places_agent.py  route_agent.py  weather_agent.py
config/: settings.py
docs/: adk-usage.md  architecture.md  module-status.md  problem-statement.md  transit-api.md
models/: schemas.py  user_preferences.py  user_profile.py
scripts/: check_api_usage.sh  demo_headless.py
scripts/pre_commit_hooks/: komorebi_guard.py
tests/: test_coordinator.py  test_crowding.py  test_main.py  test_places.py  test_places_agent.py  test_route_agent.py  test_server.py  test_transit.py  test_user_preferences.py  test_user_profile.py  test_weather.py  test_weather_agent.py
tools/: crowding.py  places_api.py  transit_api.py  weather_api.py
