[project]
name = "komorebi"
version = "0.1.0"
description = "Komorebi (木漏れ日) — an AI-powered social anxiety-friendly outing assistant for Tokyo."
authors = [
    {name = "kannch8765", email = "105340539+kannch8765@users.noreply.github.com"},
]
license = {text = "MIT"}

dependencies = [
    "pydantic>=2.13,<3.0",
    "pydantic-settings>=2.14,<3.0",
    "requests>=2.34,<3.0",
    "google-adk>=2.3,<3.0",
]

requires-python = ">=3.11"


[dependency-groups]
dev = [
    "pytest>=9.0,<10.0",
    "pytest-mock>=3.15,<4.0",
    "pre-commit>=4.0,<5.0",
]


[tool.uv]
default-groups = ["dev"]

[tool.pytest.ini_options]
pythonpath = "."
testpaths = ["tests"]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agents", "config", "models", "tools"]